Fix problem related with circle component on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overflow-x: hidden;
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -36,4 +32,10 @@ body {
       flex: 0 0 16%; 
     }
   }
+}
+
+@layer base {
+  body {
+    overflow-x: hidden;    
+  } 
 }
